--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,13 +7,14 @@
   justify-content: center;
   align-items: center;
   height: 100%; /* Adjust this to match your container height */
+  padding: 4px 8px;
 }
 
 .spinner {
   border: 4px solid rgba(173, 96, 96, 0.1);
   border-top: 4px solid #3498db;
   border-radius: 50%;
-  width: 15px;
+  width: 20px;
   height: 15px;
   animation: spin 1s linear infinite;
 }
